--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,7 +13,14 @@
                 <h1>Flexbox</h1>
             </header>
             <nav>
-                navigáció
+                <ul>
+                    <li>Kezdölap</li>
+                </ul>
+                <ul>
+                    <li><a href="#">first</a></li>
+                    <li><a href="#">second</a></li>
+                    <li><a href="#">third</a></li>
+                </ul>
             </nav>
             <article>
                 <h2>1. cím</h2>
